# confortimetro_klimaa

./: .gitignore  README.md  docker-compose.yaml  docker-compose.yaml.bak  exemple.env
api/: Dockerfile  SPECS.md  package-lock.json  package.json
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  exemple.env  main.py  nodemon.json  package-lock.json  pyproject.toml  requirements.txt  settings.py  tsconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 1fcad33485d3_modifying_autoincrement.py  3528cad9b24a_deleting_relationships.py  97aaf8ca33f0_creating_others_tables.py  9a3ff8713a16_changing_to_date_time_in_metric.py  a2d530a3fd29_modifying_username_email_and_password_.py  dc7c93533eec_first_migration.py  df4f5770b695_adding_device_relationship.py
backend/models/: __init__.py
backend/routers/: authentication_router.py  devices_router.py  locations_router.py  metric_types_router.py  metrics_router.py
backend/src/: index.ts  main.py
backend/src/controllers/: devices.ts  metrics.ts
backend/src/middlewares/: index.ts
backend/src/models/: index.ts  users.ts
backend/src/router/: authentication.ts  metrics.ts
backend/src/routers/: devices_router.py  metrics_router.py
backend/tests/: __init__.py
backend/utils/: __init__.py  auth.py  database.py  email.py
docs/: API.md  DB.md  MODBUS_SERVER.md  PRIMEIROS_PASSOS.md  README.md
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
modbus_server/: .gitignore  Dockerfile  crontab  requirements.txt
nginx/: Dockerfile  default.conf
simulations/: README.md  (+15 more)
(+166 files in other folders)
